--- a/dev-helpers/index.html
+++ b/dev-helpers/index.html
@@ -41,20 +41,30 @@
       window["SwaggerUIBundle"] = window["swagger-ui-bundle"]
       window["SwaggerUIStandalonePreset"] = window["swagger-ui-standalone-preset"]
       // Build a system
+
+      const macroFunc = (operation, parameter) => {
+        if (parameter.name === "petId") {
+            parameter.example = "abc";
+        }
+      } 
+
       const ui = SwaggerUIBundle({
-        url: "https://petstore.swagger.io/v2/swagger.json",
+        url: "./openapi.json",
         dom_id: '#swagger-ui',
         presets: [
           SwaggerUIBundle.presets.apis,
           SwaggerUIStandalonePreset
         ],
         plugins: [
-          SwaggerUIBundle.plugins.DownloadUrl
+          // SwaggerUIBundle.plugins.DownloadUrl
         ],
         layout: "StandaloneLayout"
+        // parameterMacro: macroFunc
       })
 
       window.ui = ui
+
+
 
       ui.initOAuth({
         clientId: "your-client-id",
